fixed contrast

--- a/prog109/final-project/style.css
+++ b/prog109/final-project/style.css
@@ -189,7 +189,7 @@ div.course h3 {
 }
 
 div.knowledge {
-    background-color: deepskyblue;
+    background-color: #006080;
     border-radius: 10px;
 
     padding: 10px;
